# une-unwrapped-habana

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
app/: App.tsx  constants.ts  index.html  index.tsx  package.json  pnpm-lock.yaml  types.ts  vercel.json  vite.config.ts
app/components/: BlockCard.tsx  ChartSection.tsx  SenAnalysis.tsx  TelegramMessage.tsx
app/public/: robots.txt
app/public/data/: analysis_data_2022.json  analysis_data_2023.json  analysis_data_2024.json  analysis_data_2025.json  analysis_data_2026.json
app/src/: App.tsx  styles.css  vite-env.d.ts
app/src/common/: constants.ts  generate-sitemap.ts  types.ts  utils.ts
app/src/components/: AppFooter.tsx  AveragesCard.tsx  BlockCard.tsx  ChartSection.tsx  DailyActivity.tsx  DistributionSection.tsx  ExtremeMessages.tsx  FirstLastMessages.tsx  GithubSupport.tsx  MessageHighlightCard.tsx  NavigationHub.tsx  NeobrutalTooltip.tsx  ReactionBar.tsx  ReactionSpectrum.tsx  SectionHeader.tsx  SectionLoader.tsx  SenAnalysis.tsx  StatBlock.tsx  TelegramMessage.tsx  TopList.tsx  TotalsGrid.tsx  WeeklyBlockMatrix.tsx  WordCloud.tsx
app/src/hooks/: use-year-analysis.ts
app/src/lib/: constants.ts  types.ts  utils.ts
core/: __init__.py  analyzer.py  classes.py  database.py  scrapper.py  serializers.py  session_manager.py  utils.py
